src/main/resources/k8s/beans-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: market-ingress
  namespace: beans
spec:
  ingressClassName: nginx
  rules:
    - host: java.beans
      http:
        paths:
          - path: /profile
            pathType: Prefix
            backend:
              service:
                name: profile-svc
                port:
                  number: 80
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: profile-svc
                port:
                  number: 80
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-svc
                port:
                  number: 80
          - path: /menu
            pathType: Prefix
            backend:
              service:
                name: menu-svc
                port:
                  number: 80
          - path: /coffee-shops
            pathType: Prefix
            backend:
              service:
                name: menu-svc
                port:
                  number: 80
